fix: position of search in header (now should be better on mobile)

--- a/WebContent/resources/learnweb-layout/sass/layouts/parts/_header.scss
+++ b/WebContent/resources/learnweb-layout/sass/layouts/parts/_header.scss
@@ -35,7 +35,7 @@ $topbar-button-padding: 1rem;
 
     .header-logo {
       padding: 0 $topbar-button-padding / 2;
-      width: $sidebar-width - ($topbar-button-size + $topbar-button-padding);
+      width: $sidebar-width - ($topbar-button-size + $topbar-button-padding) - 1rem;
     }
 
     .lang-button {
